# hamilton-composer

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: linting.yaml  testing.yaml
src/hamilton_composer/: __init__.py  composer.py  pipeline.py  utils.py
src/hamilton_composer/cli/: __init__.py  context.py  factory.py
src/hamilton_composer/cli/cmds/: list.py  run.py  shell.py
src/hamilton_composer/exts/: __init__.py  ipython.py
src/hamilton_composer/logging/: __init__.py  default.yaml
tests/: test_logging.py  test_utils.py
tests/api/: test_execution.py  test_initialization.py  test_pipeline.py
tests/cli/: conftest.py  test_cmd_list.py  test_cmd_run.py  test_cmd_shell.py  test_context.py  test_factory.py
tests/defs/: __init__.py  functions.py  pipelines.py
tests/exts/: test_ipython.py
